; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_riowd.c_riowd_writereg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_riowd.c_riowd_writereg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.riowd = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.riowd*, i32, i32)* @riowd_writereg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @riowd_writereg(%struct.riowd* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.riowd*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.riowd* %0, %struct.riowd** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.riowd*, %struct.riowd** %4, align 8
  %9 = getelementptr inbounds %struct.riowd, %struct.riowd* %8, i32 0, i32 0
  %10 = load i64, i64* %7, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.riowd*, %struct.riowd** %4, align 8
  %14 = getelementptr inbounds %struct.riowd, %struct.riowd* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, 0
  %17 = call i32 @writeb(i32 %12, i64 %16)
  %18 = load i32, i32* %5, align 4
  %19 = load %struct.riowd*, %struct.riowd** %4, align 8
  %20 = getelementptr inbounds %struct.riowd, %struct.riowd* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %21, 1
  %23 = call i32 @writeb(i32 %18, i64 %22)
  %24 = load %struct.riowd*, %struct.riowd** %4, align 8
  %25 = getelementptr inbounds %struct.riowd, %struct.riowd* %24, i32 0, i32 0
  %26 = load i64, i64* %7, align 8
  %27 = call i32 @spin_unlock_irqrestore(i32* %25, i64 %26)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @writeb(i32, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
